Change the swagger api doc for Get jobs parameter to step, for which direction to step for paginate
